--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "@docufy/core",
-  "description": "Docufy is a geius static site generator.",
-  "version": "0.1.0",
-  "main": "dist/index.js",
-  "type": "module",
+  "name": "docufy",
+  "description": "Docufy is a document site generator.",
+  "version": "0.0.1",
+  "private": true,
   "homepage": "https://github.com/docufy",
   "author": {
     "name": "Emad Malekpour",
@@ -11,29 +10,34 @@
     "url": "https://prodemmi.netlify.app"
   },
   "keywords": [],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "lint": "eslint cli/ --ext .ts,.tsx --fix --ignore-path .gitignore",
-    "format": "prettier --write src/**/*",
-    "prebuild": "rm -rf dist",
-    "build": "rimraf dist && tsc",
-    "docufy": "node dist/index.js"
+    "format": "prettier --write packages/**/*",
+    "build": "tsc --build"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
+    "@types/node": "^20.4.2",
     "@types/pug": "^2.0.6",
     "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
+    "lerna": "^7.1.4",
     "lodash": "^4.17.21",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
-    "typescript": "^5.1.6",
-    "designs": "workspace:*",
-    "theme-builder": "workspace:*"
+    "rollup": "^3.27.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@types/node": "^20.4.2",
+    "@docufy/core": "^1.0.0",
+    "@docufy/theme-builder": "^1.0.0",
     "pug": "^3.0.2",
     "yargs": "^17.7.2"
   }
